{
    "name": "New Controls",
    "maps": [
        {
            "name": "particle",
            "id": "1c00f307-0ff8-4740-ad32-66ce4446fdb0",
            "actions": [
                {
                    "name": "particle1",
                    "type": "Button",
                    "id": "6054acc9-86fa-452b-a9df-241f9eb015ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "particle2",
                    "type": "Button",
                    "id": "98d9720f-f110-4556-bef7-816f371454c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "particle3",
                    "type": "Button",
                    "id": "8b3cbdd5-5cea-4698-9539-61a05741ba76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "particle4",
                    "type": "Button",
                    "id": "cb4c9a81-f864-4551-b5c3-d9b64ddfac92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11a87690-d07a-4afa-8284-6e98f660b506",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "particle1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6a1328f-a0a9-4e35-a25f-2bb6d73c86f9",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "particle2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39e97d2b-56a9-4bfe-b5de-604ad1d6aa86",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "particle3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cdc7a02-33e8-4d5c-a8b6-350e407a7269",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "particle4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}